--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" style="font-size: 16;" dir="rtl">
 	<head>
+<!-- 
+<link rel="preload" as="font" href="https://v8-cdn.haraj.com.sa/fonts/sky.ttf" type="font/ttf" crossorigin="https://haraj.com.sa">
+<link rel="preload" as="font" href="https://v8-cdn.haraj.com.sa/fonts/sky-bold.ttf" type="font/ttf" crossorigin="https://haraj.com.sa"> -->
+
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body>
+	<body style="background-color: rgb(242, 244, 250);">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
